Module 7/m07a09null2-handout/grading/2024-10-25-12-49-51/compile.err
NullFinder.java:36: error: missing return statement
    }
    ^
NullFinder.java:40: error: missing return statement
    }
    ^
2 errors
